--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@
   margin-top: 13px
 }
 
+
 .authenticationPage .right{
   width: 50%; 
   height: 100vh;
@@ -81,4 +82,177 @@
 /* Change the background color of the individual notifications */
 .Toastify__toast {
   background-color:  var(--dynamic-bg-color) !important; /* Change this to your desired background color */
+}
+.navbar {
+  width: 85%;
+  height: 98vh;
+  margin: auto;
+  background-color: #5f35f5;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+.list li {
+  margin-bottom: 60px;
+  font-size: 30px;
+  position: relative;
+  z-index: 1;
+}
+
+.icon {
+  color: #bad1ff;
+}
+
+.list .icon.active {
+  color: #5f35f5;
+}
+.list .icon.active::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: -10px;
+  left: -35px;
+  width: 283%;
+  height: 100%;
+  background: #fff;
+  padding-top: 20px;
+  padding-left: 45px;
+  border-radius: 20px 0 0 20px;
+}
+.list .icon.active::before {
+  content: "";
+  z-index: 1;
+  position: absolute;
+  top: -10px;
+  right: -65px;
+  width: 6px;
+  height: 155%;
+  background: #5f35f5;
+  border-radius: 20px 0 0 20px;
+}
+.list li{
+  list-style-type: none;
+}
+.list li:last-child {
+  margin-top: 120px;
+  margin-bottom: 0;
+}
+
+.navbar-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.navbarImg {
+  width: 100px;
+  height: 100px;
+  margin-top: 38px;
+  margin-bottom: 70px;
+}
+
+.navbarImg img {
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+}
+
+.box {
+  width: 100%;
+  
+  margin-bottom: 40px;
+  padding: 20px;
+  margin-top: 10px;
+  box-sizing: border-box;
+  height: 49vh;
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+.scroll-container {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+}
+.scroll-container::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
+
+.logout{
+  color: #fff;
+}
+.group-heading {
+  display: flex;
+  z-index: 10;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: -20px;
+  left: 0;
+  background-color: #fff;
+  padding: 10px;
+}
+
+.group-card-body .profile {
+  width: 70px;
+  height: 70px;
+}
+.group-card-body .profile img {
+  width: 100%;
+  height: 100%;
+}
+.group-card-body {
+  margin-top: 17px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  padding-bottom: 14px;
+  margin-bottom: 14px;
+  display: flex;
+}
+.group-card-body:last-child {
+  border: none;
+}
+.groupsName {
+  font-size: 18px;
+  font-weight: 600;
+  color: #000;
+}
+.messageTitle {
+  font-size: 14px;
+  color: rgba(77, 77, 77, 0.75);
+  font-weight: 400;
+}
+
+.title {
+  margin-left: 14px;
+  margin-right: 51px;
+}
+.joinBtn {
+  background: #5f35f5 !important;
+  width: 87px !important;
+  color: #fff !important;
+  font-size: 20px !important;
+  font-weight: 600 !important;
+  height: 30px !important;
+ 
+}
+.addBtn{
+  background: #5f35f5 !important;
+  width: 87px !important;
+  color: #fff !important;
+  font-size: 18px !important;
+  font-weight: 600 !important;
+  height: 30px !important;
+
+}
+
+.addIcon{
+  color: hwb(0 100% 0%) !important;
+
+}
+.author{
+  font-size: 18px;
+  color: #fff;
+  font-weight: 7000;
+  margin-top: 5px;
+  text-align: center;
 }
