--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
   margin: 0;
   padding: 0;
 }
-
+.ml-2{
+  margin-left: 10px;
+}
 .authenticationPage{
   display: flex;
 }
@@ -175,8 +177,10 @@
   overflow-y: scroll;
 }
 .scroll-container::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
-  }
+ display: none; 
+
+}
+
 
 .logout{
   color: #fff;
@@ -242,7 +246,7 @@
   font-size: 18px !important;
   font-weight: 600 !important;
   height: 30px !important;
-
+  margin-left: 20px !important ;
 }
 
 .addIcon{
