--- a/src/index.css
+++ b/src/index.css
@@ -1,89 +1,88 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
-.ml-2{
+.ml-2 {
   margin-left: 10px;
 }
-.authenticationPage{
+.authenticationPage {
   display: flex;
 }
-.authenticationPage .left{
+.authenticationPage .left {
   width: 50%;
   height: 100vh;
   display: flex;
   justify-content: end;
 }
-.authenticationPage .left .text-container{
+.authenticationPage .left .text-container {
   margin-top: 100px;
   width: 60%;
 }
-.authenticationPage .left .text-container h1{
+.authenticationPage .left .text-container h1 {
   font-size: 34px;
   font-weight: 700;
-  color: #11175D;
-
-
+  color: #11175d;
 }
-.mt-2{
+.mt-2 {
   margin-top: 8px;
   width: 90%;
 }
-.authenticationPage .left .text-container p{
+.authenticationPage .left .text-container p {
   font-size: 20px;
   font-weight: 400;
   color: #000;
-  margin-top: 13px
+  margin-top: 13px;
 }
 
-
-.authenticationPage .right{
-  width: 50%; 
+.authenticationPage .right {
+  width: 50%;
   height: 100vh;
 }
 
-.authenticationPage .bg{
+.authenticationPage .bg {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.inputCss{
+.inputCss {
   margin-top: 56px !important;
   width: 90%;
 }
 
-.SignUpBtn{
+.SignUpBtn {
   width: 90%;
   margin-top: 70px !important;
-  padding : 20px 0 !important;
-  border-radius: 86px  !important;
+  padding: 20px 0 !important;
+  border-radius: 86px !important;
 }
 
-.semiText{
-  color: #03014C;
-  font-size:13px;
+.semiText {
+  color: #03014c;
+  font-size: 13px;
   font-weight: 400;
   margin-top: 35px !important;
   text-align: center;
 }
-.orange{
-  color: #EA6C00 
+.orange {
+  color: #ea6c00;
 }
 
-.eye{
+.eye {
   position: relative;
   top: 75px;
   right: 31px;
 }
 
 .Toastify {
-  background-color: #5F35F5 !important; /* Change this to your desired background color */
+  background-color: #5f35f5 !important; /* Change this to your desired background color */
 }
 
 /* Change the background color of the individual notifications */
 .Toastify__toast {
-  background-color:  var(--dynamic-bg-color) !important; /* Change this to your desired background color */
+  background-color: var(
+    --dynamic-bg-color
+  ) !important; /* Change this to your desired background color */
 }
 .navbar {
   width: 85%;
@@ -131,7 +130,7 @@
   background: #5f35f5;
   border-radius: 20px 0 0 20px;
 }
-.list li{
+.list li {
   list-style-type: none;
 }
 .list li:last-child {
@@ -160,7 +159,7 @@
 
 .box {
   width: 100%;
-  
+
   margin-bottom: 40px;
   padding: 20px;
   margin-top: 10px;
@@ -177,12 +176,10 @@
   overflow-y: scroll;
 }
 .scroll-container::-webkit-scrollbar {
- display: none; 
-
+  display: none;
 }
 
-
-.logout{
+.logout {
   color: #fff;
 }
 .group-heading {
@@ -237,9 +234,8 @@
   font-size: 20px !important;
   font-weight: 600 !important;
   height: 30px !important;
- 
 }
-.addBtn{
+.addBtn {
   background: #5f35f5 !important;
   width: 87px !important;
   color: #fff !important;
@@ -249,14 +245,287 @@
   margin-left: 20px !important ;
 }
 
-.addIcon{
+.addIcon {
   color: hwb(0 100% 0%) !important;
-
 }
-.author{
+.author {
   font-size: 18px;
   color: #fff;
   font-weight: 7000;
   margin-top: 5px;
   text-align: center;
+}
+.chatBox {
+  width: 100%;
+  padding: 20px 30px;
+  margin-top: 10px;
+  box-sizing: border-box;
+  height: 100vh;
+  overflow-y:scroll ;
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+.profileSection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #cacaca;
+  padding: 20px;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.profileContent {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  gap: 20px;
+}
+.profilePicture {
+  border: 3px solid #007bff;
+  border-radius: 100%;
+}
+.profileContent::before {
+  content: "";
+  width: 25px;
+  position: absolute;
+  bottom: 20px;
+  left: 90px;
+  height: 25px;
+  border-radius: 100%;
+  border: 4px solid #fff;
+  background-color: #00ff75;
+}
+
+.middleContent {
+  margin-bottom: 15px;
+}
+.msg{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.getMsg {
+  display: inline-block;
+  background-color: #f1f1f1;
+  padding: 10px;
+  color: #000000;
+  max-width: 60%;
+  border-radius: 10px;
+  margin-left: 20px; /* Adjust the margin to separate messages */
+  margin-bottom: 30px;
+  position: relative;
+  align-self: flex-start;
+}
+
+.getMsgContent {
+  padding: 10px;
+}
+
+.getMsgArrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 20px 0 20px 20px;
+  border-color: transparent transparent transparent #f1f1f1;
+  position: absolute;
+  bottom: -15px;
+  left: 5px; /* Adjust the left position to position the arrow */
+}
+
+.sendMsg {
+  display: inline-block;
+  background-color: #007bff;
+  padding: 10px;
+  color: #fff;
+  max-width: 60%;
+  border-radius: 10px;
+  margin-left: 20px; /* Adjust the margin to separate messages */
+  margin-bottom: 30px;
+  position: relative;
+  align-self: flex-end;
+}
+
+.sendMsContent {
+  padding: 10px;
+}
+
+.sendMsArrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 20px 20px 20px 0; /* Adjust the right border-width to create a right arrow */
+  border-color: transparent #007bff transparent transparent; /* Adjust the border-color accordingly */
+  position: absolute;
+  bottom: -15px;
+  right: 10px;
+}
+
+ .time{
+ color: rgba(0, 0, 0,0.50);
+  position: absolute;
+  bottom: 0;
+  
+}
+.sendMsg + .time{
+  color: rgba(0, 0, 0,0.50);
+  position: absolute;
+  bottom: 0;
+  right: 50px;
+  align-self: flex-end;
+
+}
+.sendImg + .time{
+  color: rgba(0, 0, 0,0.50);
+  position: absolute;
+  bottom: 0;
+  right: 50px;
+  align-self: flex-end;
+
+}
+
+
+.getImg {
+  display: inline-block;
+  width: 300px;
+  height: 250px;
+  background-color: #f1f1f1;
+  padding: 10px;
+  color: #000000;
+  max-width: 60%;
+  border-radius: 10px;
+  margin-left: 20px; /* Adjust the margin to separate messages */
+  margin-bottom: 30px;
+  position: relative;
+  align-self: flex-start;
+ 
+}
+.getImg > div{
+  width: 100%;
+  height: 100%;
+}
+.getImg > div > img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.getImg .getImgArrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 20px 0 20px 20px;
+  border-color: transparent transparent transparent #f1f1f1;
+  position: absolute;
+  bottom: -15px;
+  left: 5px; /
+}
+
+.sendImg {
+  display: inline-block;
+  width: 300px;
+  height: 250px;
+  background-color: #007bff;
+  padding: 10px;
+  color: #fff;
+  max-width: 60%;
+  border-radius: 10px;
+  margin-left: 20px; /* Adjust the margin to separate messages */
+  margin-bottom: 30px;
+  position: relative;
+  align-self: flex-end;
+  z-index: 0;
+}
+
+.sendImg > div{
+  width: 100%;
+  height: 100%;
+}
+
+.sendImg > div > img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  z-index: 1;
+}
+
+.sendImgContent {
+  padding: 10px;
+}
+
+.sendImg .sendImgArrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 20px 20px 20px 0; /* Adjust the right border-width to create a right arrow */
+  border-color: transparent #007bff transparent transparent; /* Adjust the border-color accordingly */
+  position: absolute;
+  bottom: -15px;
+  right: 10px;
+}
+
+
+.getVideo {
+  display: inline-block;
+  background-color: #f1f1f1;
+  padding: 10px;
+  color: #000000;
+  max-width: 60%;
+  border-radius: 10px;
+  margin-left: 20px; /* Adjust the margin to separate messages */
+  margin-bottom: 30px;
+  position: relative;
+  align-self: flex-start;
+}
+
+
+
+.getVideoArrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 20px 0 20px 20px;
+  border-color: transparent transparent transparent #f1f1f1;
+  position: absolute;
+  bottom: -15px;
+  left: 5px; /* Adjust the left position to position the arrow */
+}
+
+.sendVideo {
+  display: inline-block;
+  background-color: #007bff;
+  padding: 10px;
+  color: #fff;
+  max-width: 60%;
+  border-radius: 10px;
+  margin-left: 20px; /* Adjust the margin to separate messages */
+  margin-bottom: 30px;
+  position: relative;
+  align-self: flex-end;
+}
+
+
+
+.sendVideoArrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 20px 20px 20px 0; /* Adjust the right border-width to create a right arrow */
+  border-color: transparent #007bff transparent transparent; /* Adjust the border-color accordingly */
+  position: absolute;
+  bottom: -15px;
+  right: 10px;
+}
+
+.sendVideo + .time{
+  color: rgba(0, 0, 0,0.50);
+  position: absolute;
+  bottom: 0;
+  right: 50px;
+  align-self: flex-end;
+
 }
