--- a/src/index.css
+++ b/src/index.css
@@ -255,16 +255,18 @@
   margin-top: 5px;
   text-align: center;
 }
-.chatBox {
+.chatBoxContainer{
+  height: 100%;
   width: 100%;
   padding: 20px 30px;
   margin-top: 10px;
   box-sizing: border-box;
-  height: 100vh;
-  overflow-y:scroll ;
   border-radius: 20px;
   background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.chatBox {
+ 
   position: relative;
 }
 .profileSection {
@@ -300,7 +302,9 @@
 }
 
 .middleContent {
+  height: 70vh;
   margin-bottom: 15px;
+  overflow-y:scroll ;
 }
 .msg{
   display: flex;
@@ -528,4 +532,59 @@
   right: 50px;
   align-self: flex-end;
 
+}
+
+
+.getVoice {
+  display: inline-block;
+  padding: 10px;
+  color: #000000;
+  max-width: 60%;
+  border-radius: 10px;
+  margin-left: 20px; /* Adjust the margin to separate messages */
+  margin-bottom: 30px;
+  position: relative;
+  align-self: flex-start;
+}
+
+.sendVoice{
+  display: inline-block;
+  padding: 10px;
+  color: #fff;
+  max-width: 60%;
+  border-radius: 10px;
+  margin-left: 20px; /* Adjust the margin to separate messages */
+  margin-bottom: 30px;
+  position: relative;
+  align-self: flex-end;
+}
+
+.sendVoice + .time{
+  color: rgba(0, 0, 0,0.50);
+  position: absolute;
+  bottom: 0;
+  right: 50px;
+  align-self: flex-end;
+
+}
+
+.messageInputBox{
+  padding-top: 30px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid rgba(0, 0, 0, 0.25);
+}
+.inputBox{
+  width: 85%;
+ 
+}
+
+.inputBox input{
+  width: 100%;
+  padding: 25px 10px;
+  background: #F1F1F1;
+  border-radius: 10px;
+  border:none
+ 
 }
