--- a/src/index.css
+++ b/src/index.css
@@ -317,6 +317,7 @@
   padding: 10px;
   color: #000000;
   max-width: 60%;
+  word-wrap: break-word;
   border-radius: 10px;
   margin-left: 20px; /* Adjust the margin to separate messages */
   margin-bottom: 30px;
@@ -345,6 +346,7 @@
   padding: 10px;
   color: #fff;
   max-width: 60%;
+  word-wrap: break-word;
   border-radius: 10px;
   margin-left: 20px; /* Adjust the margin to separate messages */
   margin-bottom: 30px;
@@ -574,6 +576,7 @@
   display: flex;
   justify-content: space-between;
   border-top: 1px solid rgba(0, 0, 0, 0.25);
+  position: relative;
 }
 .inputBox{
   width: 85%;
