--- a/src/index.css
+++ b/src/index.css
@@ -591,3 +591,25 @@
   border:none
  
 }
+.emoji {
+  position: absolute;
+  bottom: 100px;
+  left: 50px;
+}
+.audio-recorder{
+  position: absolute;
+}
+.audioContainer {
+  position: absolute;
+  top: 36px;
+  left: 0;
+  width: 90% ;
+  z-index: 50;
+}
+ 
+.audio-recorder{
+  position: absolute;
+  top: 36px;
+  right:10%;
+  z-index: 50;
+}
